Release 1.1