@@ -11,7 +11,7 @@ import java.util.stream.Collectors;
 
 import com.alexsoft.smarthouse.db.entity.Aqi;
 import com.alexsoft.smarthouse.db.entity.HouseState;
-import com.alexsoft.smarthouse.db.entity.Temp;
+import com.alexsoft.smarthouse.db.entity.Temperature;
 
 import static com.alexsoft.smarthouse.db.entity.MeasurePlace.LIVING_ROOM;
 import static com.alexsoft.smarthouse.db.entity.MeasurePlace.TERRACE;
@@ -33,12 +33,12 @@ public class HouseStateMsgConverter {
         HouseState houseState = HouseState.builder()
             .issued(LocalDateTime.parse(literals.get(0), DateTimeFormatter.ofPattern(MQTT_DATE_TIME_PATTERN)))
             .received(ZonedDateTime.now(MQTT_ZONEID).toLocalDateTime())
-            .temperatures(List.of(
-                Temp.builder().measurePlace(LIVING_ROOM).temperature(values.get("livRoomT")).rh(values.get("livRoomRh")).ah(values.get("livRoomAh")).build(),
-                Temp.builder().measurePlace(TERRACE).temperature(values.get("roofT")).rh(values.get("roofRh")).ah(values.get("roofAh")).build(),
-                Temp.builder().measurePlace(TERRACE_WINDOW).temperature(values.get("windT")).rh(values.get("windRh")).ah(values.get("windAh")).build()
+            .temperatures(Arrays.asList(
+                Temperature.builder().measurePlace(LIVING_ROOM).temperature(values.get("livRoomT")).rh(values.get("livRoomRh")).ah(values.get("livRoomAh")).build(),
+                Temperature.builder().measurePlace(TERRACE).temperature(values.get("roofT")).rh(values.get("roofRh")).ah(values.get("roofAh")).build(),
+                Temperature.builder().measurePlace(TERRACE_WINDOW).temperature(values.get("windT")).rh(values.get("windRh")).ah(values.get("windAh")).build()
             ))
-            .aqis(List.of(
+            .aqis(Arrays.asList(
                 Aqi.builder().measurePlace(TERRACE).pm10(values.get("pm10")).pm25(values.get("pm25")).build()
             ))
             .build();
