@@ -1,10 +1,10 @@
 package com.alexsoft.smarthouse;
 
-import java.util.List;
+import java.util.Arrays;
 
 import com.alexsoft.smarthouse.db.entity.Aqi;
 import com.alexsoft.smarthouse.db.entity.HouseState;
-import com.alexsoft.smarthouse.db.entity.Temp;
+import com.alexsoft.smarthouse.db.entity.Temperature;
 import org.junit.Test;
 
 import static com.alexsoft.smarthouse.db.entity.MeasurePlace.LIVING_ROOM;
@@ -17,12 +17,12 @@ public class HouseStateBuilderTest {
     @Test
     public void HouseStateBuildingWithSettingParentsTest() {
         HouseState houseState = HouseState.builder()
-            .temperatures(List.of(
-                Temp.builder().measurePlace(LIVING_ROOM).temperature(0.0).rh(0.0).ah(0.0).build(),
-                Temp.builder().measurePlace(TERRACE).temperature(0.0).rh(0.0).ah(0.0).build(),
-                Temp.builder().measurePlace(TERRACE_WINDOW).temperature(0.0).rh(0.0).ah(0.0).build()
+            .temperatures(Arrays.asList(
+                Temperature.builder().measurePlace(LIVING_ROOM).temperature(0.0).rh(0.0).ah(0.0).build(),
+                Temperature.builder().measurePlace(TERRACE).temperature(0.0).rh(0.0).ah(0.0).build(),
+                Temperature.builder().measurePlace(TERRACE_WINDOW).temperature(0.0).rh(0.0).ah(0.0).build()
             ))
-            .aqis(List.of(
+            .aqis(Arrays.asList(
                 Aqi.builder().measurePlace(TERRACE).pm10(0.0).pm25(0.0).build()
             ))
             .build();
